# DevSync_AI

./: .dockerignore  .env.example  .gitattributes  .gitignore  .prettierignore  LICENSE  README.md  commitlint.config.json  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  tsconfig.base.json  turbo.json  vercel.json
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  pr-checks.yml
apps/ai-service/: .env.example  .gitignore  Dockerfile  README.md  package.json  pyproject.toml  tsconfig.json
apps/ai-service/app/: __init__.py  main.py
apps/ai-service/app/agents/: builder_agent.py  critic_agent.py  graph.py  state.py
apps/ai-service/app/config/: settings.py
apps/ai-service/app/core/: __init__.py
apps/ai-service/app/embeddings/: embedding_service.py
apps/ai-service/app/models/: __init__.py
apps/ai-service/app/parsers/: code_parser.py
apps/ai-service/app/providers/: __init__.py  base.py  groq_provider.py  ollama_provider.py  provider_factory.py
apps/ai-service/app/routers/: __init__.py  chat_router.py  health.py  multi_agent_router.py  rag_router.py
apps/ai-service/app/schemas/: chat_schema.py  multi_agent_schema.py  rag_schema.py
apps/ai-service/app/services/: __init__.py  ollama_service.py  rag_service.py
apps/ai-service/app/utils/: error_handler.py  git_cloner.py
apps/ai-service/app/vectorstore/: chroma_store.py
docker/: README.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  README.md  SECURITY.md
scripts/: check-versions.sh  clean.sh  setup.sh
(+202 files in other folders)
