[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devsync-ai-service"
version = "0.1.0"
description = "FastAPI foundation for DevSync AI integrations"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic-settings>=2.5.0,<3.0.0",
  "ollama>=0.3.0,<1.0.0",
  "langchain>=0.3.0,<1.0.0",
  "langchain-ollama>=0.2.0,<1.0.0",
  "langgraph>=0.2.0,<1.0.0",
  "chromadb>=0.5.0,<2.0.0",
  "groq>=0.9.0,<1.0.0",
  "python-multipart>=0.0.12,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "httpx>=0.27.0,<1.0.0",
  "ruff>=0.6.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
